# canarchy

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  fuzz.yml  lint.yml  publish.yml  test.yml
docs/: COMMAND_SPEC.md  agents.md  architecture.md  backends.md  command_spec.md  demo_generate_and_capture.md  demo_j1939_heavy_vehicle.md  docs_site.md  event-schema.md  feature-matrix.md  getting_started.md  index.md  mcp_install.md  overview.md  plugin-guide.md  release.md  security-use-cases.md  spec-template.md  troubleshooting.md  tui_plan.md
docs/benchmarks/: j1939-large-capture.md
docs/cookbook/: acquire-dataset-slice.md  analyze-tcat-capture.md  compare-dm1-faults.md  decode-spn-110.md  filter-pgn.md  find-counter-signals.md  fuzz-tesla-di-torque2-speed.md  index.md  match-dbc-against-capture.md  mcp-claude-integration.md  simulate-vehicle-profiles.md  stream-candid-into-stats.md  stream-comma-car-segments.md  verify-kvaser-interface.md  verify-pcan-interface.md  verify-vector-interface.md  virtual-can-loop.md
docs/design/: active-command-safety.md  active-transmit-safety.md  cannelloni-interop.md  composition.md  config-show-command.md  dataset-provider-workflow.md  dbc-command-workflows.md  dbc-inspect-command.md  dbc-inspect-search.md  dbc-provider-workflows.md  dbc-runtime-schema-split.md  doip-diagnostic-workflows.md  export-command.md  fuzz-afl-mutators.md  fuzz-identify.md  fuzz-signal.md  fuzz-spn.md  gateway-command.md  generate-command.md  isotp-utility-commands.md  j1587-decode.md  j1939-bounded-analysis.md  j1939-expanded-workflows.md  j1939-first-class-decoder.md  j1939-map-command.md  j1939-monitor-command.md  j1939-summary-command.md  j2497-decode.md  mcp-server.md  plugin-model.md  re-suggest.md  replay-command.md  response-feedback-fuzz.md  reverse-engineering-helpers.md  scapy-diagnostic-integration.md  send-dbc-command.md  sequence-replay.md  session-workflows.md  shell-command.md  simulate-command.md  (+10 more)
docs/examples/: config.toml
docs/javascripts/: mermaid.js
docs/stylesheets/: extra.css
docs/tests/: active-command-safety.md  active-transmit-safety.md  cannelloni-interop.md  composition.md  config-show-command.md  dataset-provider-workflow.md  dbc-command-workflows.md  dbc-inspect-command.md  dbc-inspect-search.md  dbc-provider-workflows.md  doip-diagnostic-workflows.md  export-command.md  fuzz-afl-mutators.md  fuzz-identify.md  fuzz-signal.md  fuzz-spn.md  gateway-command.md  generate-command.md  isotp-utility-commands.md  j1587-decode.md  j1939-bounded-analysis.md  j1939-expanded-workflows.md  j1939-first-class-decoder.md  j1939-map-command.md  j1939-monitor-command.md  j1939-summary-command.md  j2497-decode.md  mcp-server.md  plugin-model.md  re-suggest.md  replay-command.md  response-feedback-fuzz.md  reverse-engineering-helpers.md  scapy-diagnostic-integration.md  send-dbc-command.md  sequence-replay.md  session-workflows.md  shell-command.md  simulate-command.md  skill-manifest-schema.md  (+9 more)
docs/tutorials/: dbc_provider_workflow.md  generate_and_capture.md  index.md  j1939_heavy_vehicle.md  simulate_vehicle_traffic.md  stream_candid_dataset.md  web_dashboard.md
scripts/: build_pages_site.sh  generate_benchmark_fixture.py
src/canarchy/: __init__.py  (+63 more)
tests/: test_cannelloni.py  test_checksum.py  test_cli.py  test_compare.py  test_contrib_sqlite_sink.py  test_corpus.py  test_dataset_provider.py  test_dbc.py  test_dbc_provider.py  test_dbc_runtime.py  test_doip.py  test_fuzz.py  test_fuzz_cli.py  test_fuzz_guided.py  test_fuzz_harnesses.py  test_fuzz_identify.py  test_j1587.py  test_j1939.py  test_j1939_performance.py  test_j2497.py  test_mcp.py  test_models.py  test_plot.py  test_plugins.py  test_re_suggest.py  test_replay.py  test_reverse_engineering.py  test_scapy_uds.py  test_skills_provider.py  test_transport.py  test_tui_app.py  test_tui_capture.py  test_tui_snapshots.py  test_uds.py  test_uds_active.py  test_web.py  test_xcp.py  test_xcp_active.py
(+78 files in other folders)
