[project]
name = "canarchy"
version = "0.1.0"
description = "CLI-first CAN security research toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "hexsecs" },
]
dependencies = [
    "canmatrix>=1.2",
    "msgpack>=1.1.2",
    "python-can>=4.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.14",
]

[project.scripts]
canarchy = "canarchy.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
