[project]
name = "canarchy"
dynamic = ["version"]
description = "CLI-first CAN security research toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
keywords = ["can", "can-bus", "j1939", "uds", "security", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Security",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: System :: Hardware :: Hardware Drivers",
  "Environment :: Console",
]
authors = [
  { name = "hexsecs" },
]
dependencies = [
    "can-j1939>=2.0.12",
    "canmatrix>=1.2",
    "cantools>=39.4",
    "mcp>=1.27.0",
    "msgpack>=1.1.2",
    "pretty-j1939>=0.0.6",
    "pyyaml>=6.0",
    "python-can>=4.4",
    "requests>=2.31",
]

[project.optional-dependencies]
scapy = [
    "scapy>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.14",
]

[project.scripts]
canarchy = "canarchy.cli:main"

[project.urls]
Homepage = "https://github.com/hexsecs/canarchy"
Documentation = "https://hexsecs.github.io/canarchy/"
Repository = "https://github.com/hexsecs/canarchy"
Issues = "https://github.com/hexsecs/canarchy/issues"
Changelog = "https://github.com/hexsecs/canarchy/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.version]
path = "src/canarchy/__init__.py"

[tool.ruff]
line-length = 100
